--- a/src/app/components/add-client/add-client.component.html
+++ b/src/app/components/add-client/add-client.component.html
@@ -24,7 +24,7 @@
           name="firstName"
           #clientFirstName="ngModel"
           [ngClass]="{'is-invalid':clientFirstName.errors && clientFirstName.touched}"
-          [(ngModel)]="firstName"
+          [(ngModel)]="client.firstName"
           minlength="2"
           required
         >
@@ -46,7 +46,7 @@
           name="lastName"
           #clientLastName="ngModel"
           [ngClass]="{'is-invalid':clientLastName.errors && clientLastName.touched}"
-          [(ngModel)]="lastName"
+          [(ngModel)]="client.lastName"
           minlength="2"
           required
         >
@@ -68,7 +68,7 @@
             name="phone"
             #clientPhone="ngModel"
             [ngClass]="{'is-invalid':clientPhone.errors && clientPhone.touched}"
-            [(ngModel)]="phone"
+            [(ngModel)]="client.phone"
             minlength="2"
             required
           >
@@ -91,7 +91,7 @@
               name="email"
               #clientEmail="ngModel"
               [ngClass]="{'is-invalid':clientEmail.errors && clientEmail.touched}"
-              [(ngModel)]="email"
+              [(ngModel)]="client.email"
               minlength="2"
               required
             >
